chore: enhance logging for values retrieval from environment variables